--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a href="index.html" title="home" class="logo">
           <div id="logo">
             <h1>Explore California</h1>
+            <p> Why Not? </p>
           </div>
         </a>
         <div id="siteNav">
