Swap out - for : in index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div id="mainHeader">
         <a href="index.html" title="home" class="logo">
           <div id="logo">
-            <h1>Explore California</h1>
+            <h1>Explore California: Ok</h1>
             <p> Why Not? </p>
           </div>
         </a>
